--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
     "eslint": "^9.29.0",
     "eslint-config-next": "15.3.3",
+    "eslint-config-prettier": "^10.1.5",
     "globals": "^16.2.0",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.34.1"
