--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-config-next": "15.3.3",
     "eslint-config-prettier": "^10.1.5",
     "globals": "^16.2.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5",
     "typescript-eslint": "^8.34.1"
   }
